--- a/css/common.css
+++ b/css/common.css
@@ -4,27 +4,7 @@ header {
     align-items: center; /* Align items horizontally */
 }
 
-.ad1 {
-    height: 600px; /* Fixed height */
-    background-color: black; /* Background color */
-    width: 100%; /* Full width */
-}
 
-.ad1 img {
-    height: 600px; /* Fixed height */
-    width: 100%; /* Full width */
-}
-
-.ad2 {
-    height: 600px; /* Fixed height */
-    background-color: black; /* Background color */
-    width: 100%; /* Full width */
-}
-
-.ad2 img {
-    height: 600px; /* Fixed height */
-    width: 100%; /* Full width */
-}
 
 .content {
     margin: 0 25%; /* Left and right margin */
@@ -61,9 +41,9 @@ header {
 }
 
 main {
-    display: flex; /* Flex display */
-    justify-content: space-between; /* Space between items */
-    margin: 30px 0px 30px 0px; /* Margin */
+    width: 70%; /* You can adjust this percentage */
+    margin: 50px auto; /* Top and bottom margin, auto left and right for centering */
+    text-align: center; /* Center text */
 }
 
 .socialPic {
